--- a/components/layout/Header.module.css
+++ b/components/layout/Header.module.css
@@ -87,7 +87,7 @@
   .mobileNav {
     position: fixed;
     inset: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: #000000;
     display: flex;
